Changes in Version 0.2.0
========================

New features:

* Added functions to compute the Gini and Theil coefficients from the smoothed distributions, along with other descriptive statistics.
* Added NEWS file.

Updates:

* Updated references to the paper in Sociological Science: https://www.sociologicalscience.com/articles-v4-26-641/
* Updated documentation.