@@ -1,13 +1,13 @@
-\name{gini}
-\alias{gini}
+\name{stats_from_distribution}
+\alias{stats_from_distribution}
 \title{
-Estimate the Gini coefficient
+Estimate various statistics
 }
 \description{
-Estimates the Gini coefficient from a smoothed distribution.
+Estimates the mean, variance, standard deviation, Gini coefficient, and Theil index from a smoothed distribution.
 }
 \usage{
-gini(binFit)
+stats_from_distribution(binFit)
 }
 \arguments{
   \item{binFit}{
@@ -15,12 +15,10 @@ A list as returned by \code{\link{splinebins}}, \code{\link{stepbins}}, or \code
 }
 }
 \details{
-For distributions of non-negative support, the Gini coefficient can be computed from a cumulative distribution function \eqn{F(x)} by the integral
-\deqn{G = 1 - \frac{1}{\mu}\int_0^\infty (1-F(x))^2 \, dx}
-where \eqn{\mu} is the mean of the distribution.
+The mean and variance are calculated from the CDF. For details on the other statistics, see \code{\link{gini}} and \code{\link{theil}}.
 }
 \value{
-Returns the Gini coefficient \eqn{G}.
+A vector of five statistics.
 }
 \references{
 Paul T. von Hippel, David J. Hunter, McKalie Drown. \emph{Better Estimates from Binned Income Data: Interpolated CDFs and Mean-Matching}, Sociological Science, November 15, 2017. \url{https://www.sociologicalscience.com/articles-v4-26-641/}
@@ -37,7 +35,7 @@ bincounts <- c(157532,97369,102673,100888,90835,94191,87688,90481,
                79816,153581,195430,240948,155139,94527,92166,103217)
 stepfit <- stepbins(binedges, bincounts, 76091)
 splinefit <- splinebins(binedges, bincounts, 76091)
-gini(stepfit)
-gini(splinefit) # More accurate
+stats_from_distribution(stepfit)
+stats_from_distribution(splinefit) # More accurate
 }
 
