@@ -42,6 +42,8 @@ The decay ratio for the tail bins. Ignored unless \code{tailShape} equals \code{
 }
 \details{
 We assume that the left endpoint of the first bin is 0 and that the top bin is unbounded. Options exist to replace the top bin with a single bin or a sequence of bins in the shape of a Pareto or exponential tail. The density functions will fit a supplied estimate for the population mean, if supplied.
+
+The methods \code{\link{stepbins}} and \code{\link{rsubbins}} are included in this package mainly for the purpose of comparison. For most use cases, \code{\link{splinebins}} will produce more accurate smoothing results.
 }
 \value{
 Returns a list with the following components.
@@ -62,7 +64,7 @@ David J. Hunter and McKalie Drown
 binedges <- c(10000,15000,20000,25000,30000,35000,40000,45000,
               50000,60000,75000,100000,125000,150000,200000,NA)
 bincounts <- c(157532,97369,102673,100888,90835,94191,87688,90481,
-               79816,153581,195430,240948,155139,9452,92166,103217)
+               79816,153581,195430,240948,155139,94527,92166,103217)
 sb <- stepbins(binedges, bincounts, 76091)
 sbpt <- stepbins(binedges, bincounts, 76091, tailShape="pareto")
 
